cabal-version: 2.4
name: nano-ui
version: 0.1.0.0
synopsis:
-- description:
homepage:
-- bug-reports:
license: MIT
license-file: LICENSE
author: Zachary Churchill
maintainer: zacharyachurchill@gmail.com
-- copyright:
category: Graphics
extra-source-files: CHANGELOG.md

library
  exposed-modules:
      NanoUI
  build-depends:
      base >=4.14
    , gloss
    , reactive-banana
    , polysemy
    , FontyFruity
    , vector
    , containers
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

executable example-text-editor
  build-depends:
      base >=4.14
    , gloss
    , nano-ui
    , FontyFruity
    , polysemy
  hs-source-dirs: examples
  main-is: text-editor.hs

test-suite nano-ui-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  hs-source-dirs: tests
  main-is: NanoUITest.hs
  build-depends:
    base
  ghc-options: -Wall
